--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,3 +1,11 @@
+.app-wrapper {
+  height: 100vh;
+  background: white;
+  padding-left: 20px;
+  padding-right: 20px;
+  text-align: center;
+}
+
 .App {
   text-align: center;
 }
@@ -27,6 +35,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
