--- a/my-app/src/pages/Posts/Posts.module.css
+++ b/my-app/src/pages/Posts/Posts.module.css
@@ -2,6 +2,7 @@
     font-weight: bold;
     margin: 5px;
     cursor: pointer;
+    font-size: 15px;
 }
 
 .page {
@@ -12,4 +13,27 @@
 
 .com {
     padding: 10px;
+}
+
+.wrapper {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.main {
+    flex: 1;
+    width: 100%;
+    margin: 0;
+    font-size: 12px;
+    text-align: start;
+    padding-top: 20px;
+}
+
+.footer {
+    flex: 0 0 auto;
+}
+
+.header {
+    flex: 0 0 auto;
 }
