--- a/my-app/src/pages/About/About.module.css
+++ b/my-app/src/pages/About/About.module.css
@@ -1,6 +1,6 @@
-/* * {
-    outline: 2px solid red
-} */
+* {
+    box-sizing: border-box;
+}
 
 .wrapper {
     height: 100vh;
@@ -23,15 +23,7 @@
     flex: 0 0 auto;
 }
 
-.about {
-    margin: auto;
-    background-image: no-repeat;
-    background-image: url(../../zzz.jpg);
-    background-size: cover;
-    /* background-image: url(../../zzz.jpg); */
-    /* background-image: cover; */
-    /* background-color: yellow; */
-    background-size: cover;
-    width: auto;
-    height: 200px;
+.scroll {
+    overflow-y: auto;
+    height: 400px;
 }
