--- a/my-app/src/pages/Posts/Posts.module.css
+++ b/my-app/src/pages/Posts/Posts.module.css
@@ -6,7 +6,7 @@
 }
 
 .page {
-    margin: 2px;
+    margin: 7px;
     font-size: 13px;
     cursor: pointer;
 }
@@ -27,7 +27,7 @@
     margin: 0;
     font-size: 12px;
     text-align: start;
-    padding-top: 20px;
+    /* padding-top: 20px; */
 }
 
 .footer {
@@ -36,4 +36,23 @@
 
 .header {
     flex: 0 0 auto;
+}
+
+.list {
+    overflow-y: auto;
+    height: 400px;
+}
+
+.nav {
+    text-decoration: none;
+}
+
+.text {
+    color: black;
+}
+
+p {
+    font-size: 12px;
+    font-weight: bold;
+    margin: 5px;
 }
